frontend/src/static/css/_extra.css
/* ... */
/*
 * Managemenet pages.
 *
 */

body.dark_theme .manage-media-item .mi-title > a,
body.dark_theme .manage-users-item .mi-name > a {
	color: inherit;
	font-weight: 400;
}

/*
 * Members managemenet page.
 *
 */

.export-csv .media-list-row {
	min-height: 0;
	padding: 16px 0 0;
	text-align: right;
}

@media (max-width: 1365px) {
	.export-csv {
		max-width: 100%;
	}

	.export-csv .media-list-row {
		padding: 16px 24px 0;
	}
}

@media (max-width: 709px) {
	.export-csv .media-list-row {
		padding: 16px 16px 0;
	}
}

.export-csv a {
	display: inline-block;
	padding: 1em 2em;
	line-height: 1.125;
	text-decoration: none;
	color: #fff !important;
	background-color: #1a3f61;
}

/*
 * Uploader page.
 *
 */

.media-uploader-wrap .pre-upload-msg {
	font-weight: 500;
}

.media-uploader-wrap .pre-upload-msg a {
	text-decoration: none;
}

.media-uploader-wrap .pre-upload-msg a:hover {
	text-decoration: underline;
}

/*
 * Custom content pages.
 *
 */

.custom-page-wrapper p,
.custom-page-wrapper ul,
.custom-page-wrapper ol {
	font-size: 1em;
}

/* #################################################################################################### */

/* This css file is being used in the TinyMCE editor. */

.page-main-inner .custom-page-wrapper {
	display: block;
	margin: 0 auto;
	/* the 2 rules below is tinymce-only */
	/* padding-left: 8px !important;
    padding-right: 8px !important; */
	padding-top: 32px !important;
	padding-bottom: 64px !important;
	width: 800px;
	/* width: 1448px; */
	max-width: 100%;
}

.in-dark-mode {
	display: none;
}

body.dark_theme .in-dark-mode {
	display: initial;
}

body.dark_theme .in-light-mode {
	display: none;
}

body .page-main-inner .custom-page-wrapper {
	color: #323333;
}

body.dark_theme .page-main-inner .custom-page-wrapper {
	color: #cfd1d3;
}

.page-main-inner .custom-page-wrapper p,
.page-main-inner .custom-page-wrapper ul li {
	font-size: 16px;
	font-family: Inter, 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: 500;
	line-height: 1.5;
	letter-spacing: 0;
	word-wrap: break-word;
	overflow-wrap: break-word;

	/* Make the last paragraph not have 30px margin-bottom */
	&:not(:last-child) {
		margin-bottom: 30px;
	}
}

.page-main-inner .custom-page-wrapper ul li {
	padding-left: 0;
	margin-left: 0;
}

.page-main-inner .custom-page-wrapper ul {
	padding-left: 0;
	margin-left: 20px;
	list-style-position: outside;
}

/* Make images and videos responsive */
.page-main-inner .custom-page-wrapper img,
.page-main-inner .custom-page-wrapper iframe {
	max-width: 100%;
	height: auto;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.page-main-inner .custom-page-wrapper iframe {
	aspect-ratio: 16 / 9;
}

.page-main-inner .custom-page-wrapper a {
	text-decoration: underline;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

.page-main-inner .custom-page-wrapper a:hover {
	text-decoration: none;
}

.page-main-inner .custom-page-wrapper h1 {
	position: relative;
	display: block;
	padding-bottom: 10px;
	font-family: 'Barlow Semi Condensed', 'Arial Narrow', Arial, sans-serif;
	font-size: 32px;
	line-height: 1.2;
	color: #000;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

.page-main-inner .custom-page-wrapper h2 {
	position: relative;
	display: block;
	padding-bottom: 10px;
	font-family: 'Barlow Semi Condensed', 'Arial Narrow', Arial, sans-serif;
	font-size: 24px;
	line-height: 1.2;
	letter-spacing: 0.01;
	color: #000;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

.page-main-inner .custom-page-wrapper h3 {
	position: relative;
	display: block;
	padding-bottom: 10px;
	font-family: 'Barlow Semi Condensed', 'Arial Narrow', Arial, sans-serif;
	font-size: 18px;
	line-height: 1.5;
	letter-spacing: 0.01;
	color: #000;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

body.dark_theme .page-main-inner .custom-page-wrapper h1,
body.dark_theme .page-main-inner .custom-page-wrapper h2,
body.dark_theme .page-main-inner .custom-page-wrapper h3 {
	color: #fff;
}

.page-main-inner .custom-page-wrapper h1:after,
.page-main-inner .custom-page-wrapper h2:after {
	content: '';
	position: absolute;
	display: block;
	bottom: 0;
	left: 0;
	width: 50px;
	height: 3px;
	background-color: #e7a27b;
}

.page-main-inner .custom-page-wrapper .emphasis,
.page-main-inner .custom-page-wrapper .emphasis-large {
	color: #026690;
}

body.dark_theme .page-main-inner .custom-page-wrapper .emphasis,
body.dark_theme .page-main-inner .custom-page-wrapper .emphasis-large {
	color: #7bbbbf;
}

.page-main-inner .custom-page-wrapper .emphasis-large {
	font-size: 24px;
	line-height: 32px;
	font-family: 'Barlow Semi Condensed', 'Arial Narrow', Arial, sans-serif;
}

.page-main-inner .custom-page-wrapper .emphasis-large strong,
.page-main-inner .custom-page-wrapper em strong {
	font-weight: 500;
}

.page-main-inner .custom-page-wrapper ul.tick-list {
	list-style: none;
}

.page-main-inner .custom-page-wrapper ul.tick-list li {
	position: relative;
	padding-left: 26px;
}

.page-main-inner .custom-page-wrapper ul.tick-list li:before {
	content: '';
	position: absolute;
	top: 4px;
	left: 0;
	width: 16px;
	height: 16px;
	display: block;
	/* font-size:24px; */
	line-height: 1;
	color: #7bbbbf;
	background-image: url('../images/icons/tick.svg');
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
}

.page-main-inner .custom-page-wrapper .box {
	display: inline-block;
	width: 100%;
	padding: 30px;
	color: #000;
	background-color: #ebf7f9;
}

body.dark_theme .page-main-inner .custom-page-wrapper .box {
	color: #fff;
	background-color: #0b3145;
}

.page-main-inner .custom-page-wrapper .box img.fl {
	margin-right: 57px;
	margin-bottom: 0;
}

/* .page-main-inner .custom-page-wrapper .box a,
.page-main-inner .custom-page-wrapper .box-list a{
	text-decoration:none;
}

.page-main-inner .custom-page-wrapper .box a:hover,
.page-main-inner .custom-page-wrapper .box-list a:hover{
	text-decoration:underline;
} */
/* ... */

